[tool.poetry]
name = "hackathon-tinder-restaurant"
version = "0.1.0"
description = ""
authors = ["Cheng-Hsun, Hsu <a10121555@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
googlemaps = "^4.10.0"
dotenv = "^0.9.9"
black = "^25.1.0"
streamlit = "^1.44.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
