[tool.poetry]
name = "hackathon-tinder-restaurant"
version = "0.1.0"
description = ""
authors = ["Cheng-Hsun, Hsu <a10121555@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
googlemaps = "^4.10.0"
dotenv = "^0.9.9"
black = "^25.1.0"
ipykernel = "^6.29.5"
flask = "^3.1.0"
flask-cors = "^5.0.1"
numpy = "^2.2.4"
scikit-learn = "^1.6.1"
pytest = "^8.3.5"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
