[tool.poetry]
name = "hackathon-tinder-restaurant"
version = "0.1.0"
description = ""
authors = ["Cheng-Hsun, Hsu <a10121555@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
googlemaps = "^4.10.0"
dotenv = "^0.9.9"
black = "^25.1.0"
streamlit = "^1.44.1"
ipykernel = "^6.29.5"
flask = "^3.1.0"
flask-cors = "^5.0.1"
numpy = "^2.2.4"
scikit-learn = "^1.6.1"
pytest = "^8.3.5"
kmodes = "^0.12.2"
spacy = "^3.8.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
